feat: add project.md and link it from the side menu

--- a/header.html
+++ b/header.html
@@ -41,6 +41,7 @@ CMU 15-815 Interactive Theorem Proving
       <li class="standard"><a href="index.html">Main Page</a></li>
       <li class="standard"><a href="syllabus.html">Syllabus</a></li>
       <li class="standard"><a href="assignment.html">Assignments</a></li>
+      <li class="standard"><a href="project.html">Project</a></li>
       <li class="standard"><a href="lecture.html">Lecture Notes and Reading</a></li>
       <li class="standard"><a href="grading.html">Grading and Policies</a></li>
     </ul>
