--- a/header.html
+++ b/header.html
@@ -39,10 +39,10 @@ CMU 15-815 Interactive Theorem Proving
   <div id="nav">
     <ul>
       <li class="standard"><a href="index.html">Main Page</a></li>
-      <li class="standard"><a href="syllabus.html">Syllabus</a></li>
+      <li class="standard"><a href="lecture.html">Lectures and Reading</a></li>
+<!--      <li class="standard"><a href="syllabus.html">Syllabus</a></li> -->
       <li class="standard"><a href="assignment.html">Assignments</a></li>
       <li class="standard"><a href="project.html">Projects</a></li>
-      <li class="standard"><a href="lecture.html">Lecture Notes and Reading</a></li>
       <li class="standard"><a href="grading.html">Grading and Policies</a></li>
     </ul>
     <div class="hr">
